# PIP

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
.claude/: settings.json
alembic/: env.py
alembic/versions/: 29ddf3bc9c06_add_concept_creation_seq_and_overruled_.py
app/: auth.py  database.py  db_init.py  enums.py  main.py  models.py  prompts.py  session.py
app/agents/: checkpoint_agent.py  roadmap_agent.py
app/routers/: auth.py  chat.py  checkpoint.py  health.py  roadmap.py  skills.py  stacks.py  users.py
app/services/: concepts.py  matching.py
app/tools/: __init__.py  calculator.py  fetch.py  search.py
app/utils/: embeddings.py  graph.py  prereq_graph.py
frontend/: index.html  package-lock.json  package.json  vercel.json  vite.config.js
frontend/src/: App.jsx  api.js  index.css  main.jsx
frontend/src/components/: Drawer.jsx  LoadingScreen.jsx  MainArea.jsx  MobileBar.jsx  Sidebar.jsx  TreePanel.jsx
frontend/src/components/main/: CheckpointChat.jsx  RoadmapView.jsx
frontend/src/components/tree/: ConceptDetail.jsx  ConceptNode.jsx  ConceptTree.jsx  treeRenderer.js
frontend/src/context/: AuthContext.jsx  ProjectContext.jsx  ThemeContext.jsx
frontend/src/hooks/: useMediaQuery.js
frontend/src/pages/: AppShell.jsx  LandingPage.jsx
frontend/src/utils/: treeLayout.js
scripts/: enable_pgvector.py  list_models.py  seed_big_tree.py
