[project]
name = "pip"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "pydantic",
    "python-dotenv",
    "google-genai",
    "duckduckgo-search",
    "httpx",
    "asyncpg",
    "sqlalchemy[asyncio]",
]

[project.optional-dependencies]
dev = [
    "flake8",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
